# unichart

./: PLOTTING_STYLE_GUIDE.md  README.md  demo_default_format.ipynb  demo_plot_size_and_layout.ipynb  pyproject.toml  template_notebook.ipynb  unichart.py  unichart_dashboard.py
.claude/: settings.local.json
demo_notebooks/: UnichartNotebook_Tutorial.ipynb  adding_parameters_demo.ipynb  bar_whisker_demo.ipynb  color_map_tests.ipynb  contour_overlay_demo.ipynb  dashboard_contour_demo.ipynb  dashboard_demo.ipynb  dashboard_progression_demo.ipynb  delta_demo.ipynb  environment_presets_demo.ipynb  formatting_settings_tests.ipynb  interpolation_table_tests.ipynb  marker_map_tests.ipynb  resetting_formatting_demo.ipynb  static_images_demo.ipynb  unichart_data_model_tutorial.ipynb  variable_color_formatting_demo.ipynb
demo_notebooks/.claude/: settings.local.json
unichart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
